--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,7 +15,7 @@
 
 		<div class="page-header">
 			<p>&nbsp;</p>
-				<h1>Welcome to Articulate!</h1>
+				<h1>Welcome to My Articulate Application by Vikas!　</h1>
 		</div>
 
 		<div class="row ">
